--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "framer-motion": "^2.7.8",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-icons": "^3.11.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "styled-components": "^5.2.0"
+    "react-scroll": "^1.8.1",
+    "react-scroll-to-top": "^1.0.5",
+    "styled-components": "^5.2.0",
+    "styled-icons": "^10.22.0"
   },
   "scripts": {
     "start": "react-scripts start",
