--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.2.1",
     "framer-motion": "^2.7.8",
     "react": "^16.13.1",
+    "react-animated-burgers": "^1.2.8",
     "react-dom": "^16.13.1",
     "react-icons": "^3.11.0",
     "react-modal-video": "^1.2.6",
@@ -15,7 +16,7 @@
     "react-scripts": "3.4.3",
     "react-scroll": "^1.8.1",
     "react-scroll-to-top": "^1.0.5",
-    "styled-components": "^5.2.0",
+    "styled-components": "^5.2.1",
     "styled-icons": "^10.22.0"
   },
   "scripts": {
