--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "framer-motion": "^2.9.5",
     "react": "^16.13.1",
     "react-animated-burgers": "^1.2.8",
+    "react-cookie-consent": "^6.2.2",
     "react-dom": "^16.13.1",
     "react-icons": "^3.11.0",
     "react-modal-video": "^1.2.6",
