--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-animated-burgers": "^1.2.8",
     "react-cookie-consent": "^6.2.2",
     "react-dom": "^16.13.1",
+    "react-helmet": "^6.1.0",
     "react-icons": "^3.11.0",
     "react-modal-video": "^1.2.6",
     "react-router-dom": "^5.2.0",
